--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -96,7 +96,8 @@
         </div>
     </section>
 
-    <!-- Contact Section -->
+    
+<!-- Contact Section -->
     <section id="contact">
         <div class="container">
             <div class="row">
@@ -109,32 +110,41 @@
                 <div class="col-lg-8 col-lg-offset-2">
                     <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
                     <!-- The form should work on most web servers, but if the form is not working you may need to configure your web server differently. -->
-                    <form name="sentMessage" id="contactForm" novalidate>
+                <%= simple_form_for @contact, :html => {:class => 'form-horizontal'} do |f| %>
                         <div class="row control-group">
                             <div class="form-group col-xs-12 floating-label-form-group controls">
-                                <label for="name">Name</label>
-                                <input type="text" class="form-control" placeholder="Name" id="name" required data-validation-required-message="Please enter your name.">
+                                <div class="field">
+                                   
+                                    <%= f.input :name, :required => true, :placeholder => "Name", :type => "text", :class => "form-control" %>
+                                </div>
+                                <p class="help-block text-danger"></p>
+                                
+                            </div>
+                        </div>
+                        <div class="row control-group">
+                            <div class="form-group col-xs-12 floating-label-form-group controls">
+                                <div class="field">
+                                   
+                                    <%= f.input :email, :required => true, :placeholder => "Email", :type => "text", :class => "form-control" %>
+                                </div>
                                 <p class="help-block text-danger"></p>
                             </div>
                         </div>
                         <div class="row control-group">
                             <div class="form-group col-xs-12 floating-label-form-group controls">
-                                <label for="email">Email Address</label>
-                                <input type="email" class="form-control" placeholder="Email Address" id="email" required data-validation-required-message="Please enter your email address.">
+                               <div class="field">
+                                   
+                                    <%= f.input :number, :required => true, :placeholder => "Number", :type => "tel", :class => "form-control" %>
+                                </div>
                                 <p class="help-block text-danger"></p>
                             </div>
                         </div>
                         <div class="row control-group">
                             <div class="form-group col-xs-12 floating-label-form-group controls">
-                                <label for="phone">Phone Number</label>
-                                <input type="tel" class="form-control" placeholder="Phone Number" id="phone" required data-validation-required-message="Please enter your phone number.">
-                                <p class="help-block text-danger"></p>
-                            </div>
-                        </div>
-                        <div class="row control-group">
-                            <div class="form-group col-xs-12 floating-label-form-group controls">
-                                <label for="message">Message</label>
-                                <textarea rows="5" class="form-control" placeholder="Message" id="message" required data-validation-required-message="Please enter a message."></textarea>
+                                  <div class="field">
+                                      
+                                      <%= f.input :message, :required => true, :placeholder => "Message", :as => :text, :rows => 5, :class => "form-control" %>
+                                  </div>
                                 <p class="help-block text-danger"></p>
                             </div>
                         </div>
@@ -142,17 +152,14 @@
                         <div id="success"></div>
                         <div class="row">
                             <div class="form-group col-xs-12">
-                                <button type="submit" class="btn btn-success btn-lg">Send</button>
+                                <%= f.button :submit, 'Send', :class=> "btn btn-success btn-lg" %>                            
                             </div>
                         </div>
-                    </form>
+                    <%end%>
                 </div>
             </div>
         </div>
     </section>
-
-    
-
     <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes) -->
     <div class="scroll-top page-scroll hidden-sm hidden-xs hidden-lg hidden-md">
         <a class="btn btn-primary" href="#page-top">
