--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,4 +1,5 @@
 
+
 <!-- Contact Section -->
     <section id="contact">
         <div class="container">
@@ -15,10 +16,8 @@
                 <%= simple_form_for @contact, :html => {:class => 'form-horizontal'} do |f| %>
                         <div class="row control-group">
                             <div class="form-group col-xs-12 floating-label-form-group controls">
-                                <div class="field">
-                                   
-                                    <%= f.input :name, :required => true, :placeholder => "Name", :type => "text", :class => "form-control" %>
-                                </div>
+                                   <label for="name">Name</label>
+                                    <%= f.text_field :name, :required => true, :placeholder => "Name", :type => "text", :class => "form-control", :id => "name" %>
                                 <p class="help-block text-danger"></p>
                                 
                             </div>
@@ -26,8 +25,8 @@
                         <div class="row control-group">
                             <div class="form-group col-xs-12 floating-label-form-group controls">
                                 <div class="field">
-                                   
-                                    <%= f.input :email, :required => true, :placeholder => "Email", :type => "text", :class => "form-control" %>
+                                  <label for="email">Email</label>
+                                    <%= f.email_field :email, :required => true, :placeholder => "Email", :type => "text", :class => "form-control", :id => "email" %>
                                 </div>
                                 <p class="help-block text-danger"></p>
                             </div>
@@ -35,8 +34,8 @@
                         <div class="row control-group">
                             <div class="form-group col-xs-12 floating-label-form-group controls">
                                <div class="field">
-                                   
-                                    <%= f.input :number, :required => true, :placeholder => "Number", :type => "tel", :class => "form-control" %>
+                                   <label for="number">Email</label>
+                                    <%= f.telephone_field :number, :required => true, :placeholder => "Number", :type => "tel", :class => "form-control", :id => "number" %>
                                 </div>
                                 <p class="help-block text-danger"></p>
                             </div>
@@ -44,8 +43,8 @@
                         <div class="row control-group">
                             <div class="form-group col-xs-12 floating-label-form-group controls">
                                   <div class="field">
-                                      
-                                      <%= f.input :message, :required => true, :placeholder => "Message", :as => :text, :rows => 5, :class => "form-control" %>
+                                    <label for="name">message</label>
+                                      <%= f.text_area :message, :required => true, :placeholder => "Message", :as => :text, :rows => 5, :class => "form-control", :id => "message" %>
                                   </div>
                                 <p class="help-block text-danger"></p>
                             </div>
@@ -55,6 +54,64 @@
                         <div class="row">
                             <div class="form-group col-xs-12">
                                 <%= f.button :submit, 'Send', :class=> "btn btn-success btn-lg" %>                            
+                            </div>
+                        </div>
+                    <%end%>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+
+
+    <!-- Contact Section -->
+    <section id="contact">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2>Contact Me</h2>
+                    <hr class="star-primary">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2">
+                    <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
+                    <!-- The form should work on most web servers, but if the form is not working you may need to configure your web server differently. -->
+                    <%= simple_form_for @contact, :html => {:class => 'form-horizontal'} do %>
+                        <div class="row control-group">
+                            <div class="form-group col-xs-12 floating-label-form-group controls">
+                                <label for="name">Name</label>
+                                <input type="text" class="form-control" placeholder="Name" id="name" required data-validation-required-message="Please enter your name.">
+                                <p class="help-block text-danger"></p>
+                            </div>
+                        </div>
+                        <div class="row control-group">
+                            <div class="form-group col-xs-12 floating-label-form-group controls">
+                                <label for="email">Email Address</label>
+                                <input type="email" class="form-control" placeholder="Email Address" id="email" required data-validation-required-message="Please enter your email address.">
+                                <p class="help-block text-danger"></p>
+                            </div>
+                        </div>
+                        <div class="row control-group">
+                            <div class="form-group col-xs-12 floating-label-form-group controls">
+                                <label for="phone">Phone Number</label>
+                                <input type="tel" class="form-control" placeholder="Phone Number" id="phone" required data-validation-required-message="Please enter your phone number.">
+                                <p class="help-block text-danger"></p>
+                            </div>
+                        </div>
+                        <div class="row control-group">
+                            <div class="form-group col-xs-12 floating-label-form-group controls">
+                                <label for="message">Message</label>
+                                <textarea rows="5" class="form-control" placeholder="Message" id="message" required data-validation-required-message="Please enter a message."></textarea>
+                                <p class="help-block text-danger"></p>
+                            </div>
+                        </div>
+                        <br>
+                        <div id="success"></div>
+                        <div class="row">
+                            <div class="form-group col-xs-12">
+                                <button type="submit" class="btn btn-success btn-lg">Send</button>
                             </div>
                         </div>
                     <%end%>
