changed to env variables

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,13 +5,12 @@
       <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
       <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
       <%= csrf_meta_tags %>
-    <!-- Bootstrap Core CSS -->
-    <link href="../vendor/assets/bootstrap.min.css" rel="stylesheet">
+                <!-- Bootstrap Core CSS -->
+    <link href="../../assets/bootstrap.min.css" rel="stylesheet">
     <!-- Theme CSS -->
     <link href="../../assets/freelancer.min.css" rel="stylesheet">
+    <link href="../../assets/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-<!-- Custom Fonts -->
-    <link href="../vendor/assets/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
 </head>
@@ -21,10 +20,10 @@
 		<%= render '/layouts/alerts'%>       
 				<%= yield %>		
 		<%= render '/layouts/footer'%>
-        <!-- jQuery -->
-    <script src="../vendor/assets/jquery.min.js"></script>
+
+    <script src="../../assets/jquery.min.js"></script>
     <!-- Bootstrap Core JavaScript -->
-    <script src="../vendor/assets/bootstrap.min.js"></script>
+    <script src="../../assets/bootstrap.min.js"></script>
     <!-- Plugin JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
     <!-- Contact Form JavaScript -->
